Use alternative method of preventing margin collapse in masthead component. Fixes #245

--- a/x-govuk/components/masthead/_masthead.scss
+++ b/x-govuk/components/masthead/_masthead.scss
@@ -9,11 +9,7 @@ $x-govuk-masthead-text-colour: govuk-colour("white");
   @include govuk-responsive-padding(4, "bottom");
   background-color: $x-govuk-masthead-background-colour;
   color: $x-govuk-masthead-text-colour;
-  display: flex; // Prevent margin collapse
-
-  > .govuk-width-container {
-    flex: 1;
-  }
+  padding-top: 0.1px; // Prevent margin collapse
 }
 
 .x-govuk-masthead__title {
